@@ -376,6 +376,7 @@ process to continue normally."
   (setf sb!alien::*default-c-string-external-format* nil)
   ;; WITHOUT-GCING implies WITHOUT-INTERRUPTS.
   (without-gcing
+    (finalizers-reinit)
     ;; Create *CURRENT-THREAD* first, since initializing a stream calls
     ;; ALLOC-BUFFER which calls FINALIZE which acquires **FINALIZER-STORE-LOCK**
     ;; which needs a valid thread in order to grab a mutex.
